# CryptXT

./: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  cryptxt.py  example.txt  install.bat  install.sh  package.json  pyproject.toml  requirements.txt  setup.py
